--- a/android/VirtualDrumKit/app/src/main/res/layout/activity_virtual_drum_kit.xml
+++ b/android/VirtualDrumKit/app/src/main/res/layout/activity_virtual_drum_kit.xml
@@ -12,5 +12,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:id="@+id/textStatus" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start!"
+        android:id="@+id/buttonStart"
+        android:layout_below="@+id/textStatus"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop!"
+        android:id="@+id/buttonStop"
+        android:layout_below="@+id/buttonStart"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
