--- a/android/SensorCSV/app/src/main/res/layout/activity_virtual_drum_kit.xml
+++ b/android/SensorCSV/app/src/main/res/layout/activity_virtual_drum_kit.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="(This is just the CSV-writing flavor of the app!)"
         android:id="@+id/textStatus" />
 
     <Button
